Fixes .featurette sections overlapping below 'md' breakpoint
Fixes #4308

--- a/website/_assets/css/_feature.scss
+++ b/website/_assets/css/_feature.scss
@@ -344,7 +344,7 @@ $feature-hero-text-shadow: '';
 
 @include media-breakpoint-up('md') {
   .featurette {
-    height: 8rem;
+    height: 11rem;
     margin-top: 0;
     margin-bottom: 3rem;
   }
